--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ h2 {
 .header {
   height: 75px; }
 .header .header-container {
-  max-width: 900px;
+  max-width: 100%;
   width: 100%;
   margin: auto; }
 .header .header-container .logo {
@@ -215,13 +215,47 @@ h2 {
   height: 100%; }
 
 .container {
-  max-width: 900px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
 .container:after {
   content: " ";
   display: block;
   clear: both; }
+head {
+  display: block;
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+  z-index: 999;
+  color: #333;
+  background: rgba(255, 255, 255, 0.25); }
+head:before {
+  content: "|||";
+  display: block;
+  padding: 5px 10px;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: bold; }
+head:hover {
+  background: rgba(255, 255, 255, 0.5);
+  color: red; }
+head:hover ~ .container, head:hover ~ body .container {
+  position: relative; }
+head:hover ~ .container:before, head:hover ~ body .container:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  content: " ";
+  z-index: 998;
+  background-image: -webkit-linear-gradient(left, rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
+  background-image: linear-gradient(to right, rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
+  background-size: 8.47458%;
+  background-origin: content-box;
+  background-clip: content-box;
+  background-position: left top; }
 
 .staffpick {
   width: 66.10169%;
@@ -276,3 +310,26 @@ h2 {
   height: 100%; }
 .search-results .search-results-card .search-results-infos {
   height: 100%; }
+
+#top {
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0; }
+#top .logo {
+  width: 16.94915%;
+  float: left;
+  margin-right: 1.66667%;
+  background-color: #fbeecb; }
+#top .nav-top {
+  width: 66.10169%;
+  float: right;
+  margin-right: 0;
+  text-align: right;
+  background-color: #fbeecb; }
+#top .nav-top ul {
+  margin: 0; }
+#top .nav-top ul li {
+  padding: 0 10px;
+  display: inline-block;
+  padding: 0 0.5em; }
