--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,10 @@ table {
 td, th {
   padding: 0; }
 
+.hidden {
+  display: none !important;
+  visibility: hidden !important; }
+
 h2 {
   text-align: center;
   font-size: 1rem;
