--- a/sass/lib/_mixins.scss
+++ b/sass/lib/_mixins.scss
@@ -1,21 +1,12 @@
-@mixin sticky-footer($footer-height, $wrapper-selector: unquote("#wrapper"), $container-selector: unquote("#container"), $footer-selector: unquote("#footer")) {
-  html, body {
-    height: 100%;
-  }
-  body {
-  	margin: 0px;
-  	padding: 0px;
-  }
-  #{$wrapper-selector} {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -$footer-height;
-    #{$container-selector} {
-      padding: 0 0 $footer-height 0;
-    } 
-  }
-  #{$footer-selector} {
-    height: $footer-height; 
-  }
+// Collection of Mixins
+
+
+@import "card";
+// Hide from screenreaders and browsers
+//
+// Credit: HTML5 Boilerplate
+
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
 }
