--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -3,6 +3,9 @@
 
 #top {
 	 @include span(full);
+	 @include card(1);
+	 background-color:$gray;
+	 height: 75px;
 	 .logo {@include span(2 wide first);
 	 		background-color:$one; }
 	 .nav-top { @include span(8 last);
