--- a/sass/lib/_lib.scss
+++ b/sass/lib/_lib.scss
@@ -1,5 +1,6 @@
 /* Default Setup for Christophe Rudyj's Gulp */
 
-@import "normalize";
-@import "susy";				
-@import "breakpoint";
+@import  "normalize";
+@import  "susy";				
+@import  "breakpoint";
+@import  "reset";
