Added 12 col full width

--- a/css/style.css
+++ b/css/style.css
@@ -526,13 +526,34 @@ head:hover ~ .container:before, head:hover ~ body .container:before {
   height: 100%; }
 
 #top {
-  width: 100%;
-  float: left;
-  margin-left: 0;
-  margin-right: 0;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
+  padding-left: 8.47458%;
+  padding-right: 8.47458%;
   background-color: gray;
   height: 75px; }
+#top:after {
+  content: " ";
+  display: block;
+  clear: both; }
+head:hover ~ #top, head:hover ~ body #top {
+  position: relative; }
+head:hover ~ #top:before, head:hover ~ body #top:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  content: " ";
+  z-index: 998;
+  background-image: -webkit-linear-gradient(left, rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
+  background-image: linear-gradient(to right, rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
+  background-size: 8.47458%;
+  background-origin: content-box;
+  background-clip: content-box;
+  background-position: left top; }
 #top .logo {
   width: 16.94915%;
   float: left;
@@ -583,7 +604,7 @@ head:hover ~ .container:before, head:hover ~ body .container:before {
   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
   min-height: 100px;
   background-color: white;
-  margin-bottom: 1.69492%; }
+  margin-bottom: 0.84746%; }
 .post .title {
   width: 100%;
   float: left;
