--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -22,7 +22,7 @@
 .post { @include span(8 of 12); @include card(2);
 		min-height:100px;
 		background-color: white;
-		margin-bottom: gutter();
+		margin-bottom: gutter() / 2;
 
 		.title{
 
