--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -2,8 +2,10 @@
 //  Main View
 
 #top {
-	 @include span(full);
+	 @include container(12 center);
 	 @include card(1);
+	 @include pad(1 of 12);
+// padding-left: span(2 of 12) + gutter(12);
 	 background-color:$gray;
 	 height: 75px;
 	 .logo {@include span(2 wide first);
