--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,11 @@ $susy: (
 $one: #fbeecb;
 $two: #71dad2;
 $three: #265432;
-$gray : rgb(128, 128, 128);
+$nav: #f7fdfe;
+$gray :#82868f;
+$footer-gray:#45494d;
+$yellow: #f7c600;
+
 
 // size
 $lg:  1200px;
