--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -6,8 +6,8 @@
 	 @include card(1);
 	 @include pad(1 of 12);
 // padding-left: span(2 of 12) + gutter(12);
-	 background-color:$gray;
-	 height: 75px;
+	 background-color:$nav;
+	 height: 80px;
 	 .logo {@include span(2 wide first);
 	 		background-color:$one; }
 	 .nav-top { @include span(8 last);
