--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Palanquin:400,500,600,700&subset=latin,latin-ext);
 @import  "lib/lib";
 @import  "lib/mixins";
 
@@ -35,6 +36,7 @@ $sm:   750px;
 @import "nav";
 @import "top";
 @import "component";
+@import "profile";
 
 
 
