Added compass to lib to get transistion mixins (temp) index3 has the full footer text plus notes for simon

--- a/sass/lib/_lib.scss
+++ b/sass/lib/_lib.scss
@@ -1,6 +1,8 @@
 /* Default Setup for Christophe Rudyj's Gulp */
 
 @import  "normalize";
-@import  "susy";				
+@import  "susy";
+@import  "compass";				
 @import  "breakpoint";
 @import  "reset";
+
