--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -7,7 +7,8 @@
 	overflow: auto;
 	text-align:center;
 	margin-bottom:0.5em;
-	ul li{ float:left; list-style: none;  
+	ul li{ float:left; list-style: none;
+			height:150px;  
 		  h2 {font-size:2em; padding:0;
 		  	&:before, &:after {
 		  		content: "a string";
@@ -39,3 +40,4 @@
 			 }
 		
 	}
+
