--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Palanquin:400,500,600,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Palanquin:400,500,600,700|Roboto:400,400italic,500,500italic,700,700italic&subset=latin,latin-ext);
 @import  "lib/lib";
 @import  "lib/mixins";
 
