--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,9 +5,11 @@ footer{
 	height: 100px;
 	color:$gray;
 	background-color: $footer-gray;
-	@include rob(1em, 700);
+	@include rob(0.85em, 100);
+	list-style:none; 
 	nav{
 		@include span(6 wide first);
+		@include vertical-align;
 		background-color:$one;
 		ul{
 			margin:0;
@@ -23,16 +25,24 @@ footer{
 		}
 	}
 	.social{
-		@include span(1 last);
-		background-color:$two;
-		li {border-radius:50%; border:1px solid #e3e3e3;}
+		@include span(2 last);
+		// background-color:$two;
+		li {border-radius:50%; border:2px solid #e3e3e3;
+			width:30px; height: 30px; display:inline-block;
+			text-align:center;
+			a{color:#e3e3e3;}
+			i{@include vertical-align; font-size: 1.3em;}
+			}
 	}
 	.legal{
 		@include span(full);
 		clear:both;
-		
-		background-color:$three;
+		text-align:right;
+		// background-color:$three;
 		li{display:inline-block; list-style:none; 
+			border-right:1px solid lighten($footer-gray, 15%);
+			padding:0 0.5em;
+			&:nth-last-child {border-right:none; padding-right:0;}
 			a{color:lighten($footer-gray, 15%);
 				text-decoration:none;
 				&:hover {color:lighten($footer-gray, 10%);
