--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,8 +23,10 @@ $one: #fbeecb;
 $two: #71dad2;
 $three: #265432;
 $nav: #f7fdfe;
-$gray :#82868f;
+$gray :#D6DDE3;
 $footer-gray:#45494d;
+$footer-gray-light:#d7dee4;
+$footer-gray-dark:#73767a;
 $yellow: #f7c600;
 
 
