--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,12 +23,34 @@ $one: #fbeecb;
 $two: #71dad2;
 $three: #265432;
 $nav: #f7fdfe;
+
+// Gray
 $gray :#D6DDE3;
 $footer-gray:#45494d;
 $footer-gray-light:#d7dee4;
 $footer-gray-dark:#73767a;
-$yellow: #f7c600;
 
+
+// Indie logo Colors
+$ind-red:   #BC4444;
+$ind-blue:  #466EAF;
+$ind-green: #237C23;
+$yellow:    #f7c600;
+
+$primary-color: $ind-red;
+$primary-color-light: lighten($primary-color, 15%) !default;
+$primary-color-dark: darken($primary-color, 15%) !default;
+
+$secondary-color: #26a69a;
+$success-color: #4CAF50;
+$error-color: #F44336;
+$link-color: #039be5;
+
+$button-bg-color-disabled: #DFDFDF !default;
+$button-color: $secondary-color !default;
+$button-color-disabled: #9F9F9F !default;
+$button-color-flat: #343434 !default;
+$button-color-raised: #fff !default;
 
 // size
 $lg:  1200px;
@@ -38,6 +60,7 @@ $sm:   750px;
 @import "nav";
 @import "top";
 @import "component";
+@import "input";
 @import "profile";
 @import "button";
 @import "landing";
