Modifed the landing fort breakpoint declares and added form stuff

--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -2,7 +2,10 @@
               height:191px;
               width:span(2 of 4); overflow:hidden; 
               margin:0 auto; padding: 0;
-             &::before{content: url("../images/logo_big.png"); display: block;}
+             &::before{content: url("../images/logo_big.png"); display: block;
+         				@include breakpoint(max-width ($sm - 1)){
+         				content: url("../images/logo.png");	}
+         				}
              } 
 .tagline {text-align:center; 
 	@include span(full);
@@ -11,10 +14,21 @@
 		}
 .land {@include span(4 of 12 split);
 		background-color: yellow; text-align:center;
-	   .icon{ width:150px; margin:0 auto;}
+		 @include breakpoint(max-width ($sm - 1)){ @include span(full);}
+	   .icon{ width:150px; margin:0 auto;
+	    @include breakpoint(max-width ($sm - 1)){ @include span(2 of 12 first);}
+
+	    }
 	   article {@include rob(1em/1.1em, 400);
 	   			h1 {@include pal(1.5em, 700);}
 	   			strong {font-weight:700;}
+	   			@include breakpoint(max-width ($sm - 1)){
+	   			 @include span(10 of 12 last); text-align:left;
+	   			}
 	   		}
  
 	   }
+#sign{ @include span(4 of 12 center);
+		.signup {@extend .button; background-color:red; margin:0 auto;}
+	}
+		}
