--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -13,7 +13,7 @@
 		strong {font-weight:700;}
 		}
 .land {@include span(4 of 12 split);
-		background-color: yellow; text-align:center;
+		text-align:center;
 		 @include breakpoint(max-width ($sm - 1)){ @include span(full);}
 	   .icon{ width:150px; margin:0 auto;
 	    @include breakpoint(max-width ($sm - 1)){ @include span(2 of 12 first);}
@@ -28,7 +28,7 @@
 	   		}
  
 	   }
-#sign{ @include span(4 of 12 center);
+#sign{ clear:both;
+	width: span(4 of 12 center); margin:0 auto; padding-bottom:gutter();
 		.signup {@extend .button; background-color:red; margin:0 auto;}
 	}
-		}
