--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,8 @@ $ind-blue:  #466EAF;
 $ind-green: #237C23;
 $yellow:    #f7c600;
 
+
+// Materialize Color
 $primary-color: $ind-red;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
@@ -57,7 +59,7 @@ $lg:  1200px;
 $med:  952px;
 $sm:   750px; 
 
-@import "nav";
+
 @import "top";
 @import "component";
 @import "input";
