Stylised landing.html so it's more accurate.

--- a/css/style.css
+++ b/css/style.css
@@ -1360,7 +1360,7 @@ select {
   height: 191px;
   width: 47.36842%;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 30px auto 30px auto;
   padding: 0; }
 .logo-landing::before {
   content: url("../images/logo_big.png");
@@ -1370,13 +1370,15 @@ select {
     content: url("../images/logo.png"); } }
 
 .tagline {
-  text-align: center;
   width: 100%;
   float: left;
   margin-left: 0;
   margin-right: 0;
   font: 1.3em "Roboto", Helvetica, Arial, sans-serif;
-  font-weight: 400; }
+  font-weight: 400;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center; }
 .tagline strong {
   font-weight: 700; }
 
@@ -1385,7 +1387,9 @@ select {
   float: left;
   margin-left: 0.83333%;
   margin-right: 0.83333%;
-  text-align: center; }
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px; }
 @media (max-width: 749px) {
   .land {
     width: 100%;
@@ -1420,11 +1424,15 @@ select {
   width: 32.20339%;
   margin: 0 auto;
   padding-bottom: 1.69492%; }
+#sign form {
+  margin-bottom: 60px; }
 #sign .signup {
   background-color: #f7c600;
-  margin: 0 auto;
+  margin: 25px auto;
+  padding: 0 30px;
   border-radius: 1em;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  display: block; }
 
 footer {
   max-width: 100%;
