--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -14,21 +14,30 @@
 		}
 .land {@include span(4 of 12 split);
 		text-align:center;
-		 @include breakpoint(max-width ($sm - 1)){ @include span(full);}
+		 @include breakpoint(max-width ($sm - 1)){ @include span(full); 
+		 	height:135px; margin-bottom:gutter(); background-color: green; 
+		    @include card(1);}
 	   .icon{ width:150px; margin:0 auto;
-	    @include breakpoint(max-width ($sm - 1)){ @include span(2 of 12 first);}
-
+	    @include breakpoint(max-width ($sm - 1)){ @include span(3 of 12 first);
+			background-color: blue; padding:1.2em 0; height:97px;
+			img{width:50%;}
+	    }
+		
 	    }
 	   article {@include rob(1em/1.1em, 400);
 	   			h1 {@include pal(1.5em, 700);}
 	   			strong {font-weight:700;}
 	   			@include breakpoint(max-width ($sm - 1)){
-	   			 @include span(10 of 12 last); text-align:left;
+	   			 @include span(8 of 12 last); text-align:left;
+	   			 h1{margin:0;}
 	   			}
 	   		}
  
 	   }
 #sign{ clear:both;
 	width: span(4 of 12 center); margin:0 auto; padding-bottom:gutter();
-		.signup {@extend .button; background-color:$yellow; margin:0 auto; border-radius:1em; text-transform:uppercase;}
+	@include breakpoint(max-width ($sm - 1)){ @include span(full);}
+		.signup {@extend .button; background-color:$yellow; margin:0 auto; 
+			padding:20px; border-radius:1em; text-transform:uppercase;
+			@include breakpoint(max-width ($sm - 1)){ width:span(11 of 12); } }
 	}
