--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -1,7 +1,9 @@
+
 .logo-landing {
 	height:191px;
 	width:span(2 of 4); overflow:hidden; 
-	margin:30px auto 30px auto;
+	margin:30px auto;
+	@include breakpoint(max-width ($sm - 1)){width:span (3 of 4);}
 	padding: 0;
 	&::before{
 		content: url("../images/logo_big.png"); display: block;
@@ -17,6 +19,7 @@
 	margin-bottom: 40px;
 	text-align:center;
 	strong {font-weight:700;}
+	@include breakpoint(max-width ($sm - 1)){ @include span(96%);}
 }
 
 .land {
@@ -24,46 +27,22 @@
 	text-align:center;
 	margin-top:40px;
 	margin-bottom:40px;
-	@include breakpoint(max-width ($sm - 1)){ @include span(full);}
+	@include breakpoint(max-width ($sm - 1)){ @include span(96%); 
+		 	height:140px; margin:(gutter() / 2) 0; 
+		    @include card(1);}
 	.icon{ width:150px; margin:0 auto;
-		@include breakpoint(max-width ($sm - 1)){ @include span(2 of 12 first);}
+		@include breakpoint(max-width ($sm - 1)){ @include span(3 of 12 );
+			padding:1.2em 0; height:97px;
+			img{width:60%;}
+	    }
 	}
 	article {@include rob(1em/1.1em, 400);
 		h1 {@include pal(1.5em, 700);}
 			strong {font-weight:700;}
 			@include breakpoint(max-width ($sm - 1)){
-			@include span(10 of 12 last); text-align:left;
-		}
-<<<<<<< HEAD
-.land {@include span(4 of 12 split);
-		text-align:center;
-		 @include breakpoint(max-width ($sm - 1)){ @include span(full); 
-		 	height:135px; margin-bottom:gutter(); background-color: green; 
-		    @include card(1);}
-	   .icon{ width:150px; margin:0 auto;
-	    @include breakpoint(max-width ($sm - 1)){ @include span(3 of 12 first);
-			background-color: blue; padding:1.2em 0; height:97px;
-			img{width:50%;}
-	    }
-		
-	    }
-	   article {@include rob(1em/1.1em, 400);
-	   			h1 {@include pal(1.5em, 700);}
-	   			strong {font-weight:700;}
-	   			@include breakpoint(max-width ($sm - 1)){
-	   			 @include span(8 of 12 last); text-align:left;
-	   			 h1{margin:0;}
-	   			}
-	   		}
- 
-	   }
-#sign{ clear:both;
-	width: span(4 of 12 center); margin:0 auto; padding-bottom:gutter();
-	@include breakpoint(max-width ($sm - 1)){ @include span(full);}
-		.signup {@extend .button; background-color:$yellow; margin:0 auto; 
-			padding:20px; border-radius:1em; text-transform:uppercase;
-			@include breakpoint(max-width ($sm - 1)){ width:span(11 of 12); } }
-=======
+			 @include span(9 of 12 last); text-align:left;
+			 h1{margin:0;}
+			}
 	}
 
 }
@@ -75,13 +54,15 @@
 	form{
 		margin-bottom:60px;
 	}
+	@include breakpoint(max-width ($sm - 1)){ @include span(96%);}
 	.signup {@extend .button;
 		background-color:$yellow;
 		margin:25px auto;
 		padding:0 30px;
+
 		border-radius:1em;
 		text-transform:uppercase;
 		display:block;
->>>>>>> d5c21682a6a77dbaf5123692668932dcab24b600
+		@include breakpoint(max-width ($sm - 1)){ width:span(11 of 12); height:45px;}
 	}
 }
