--- a/css/style.css
+++ b/css/style.css
@@ -1364,8 +1364,11 @@ select {
   height: 191px;
   width: 47.36842%;
   overflow: hidden;
-  margin: 30px auto 30px auto;
+  margin: 30px auto;
   padding: 0; }
+@media (max-width: 749px) {
+  .logo-landing {
+    width: span 3 of 4; } }
 .logo-landing::before {
   content: url("../images/logo_big.png");
   display: block; }
@@ -1385,6 +1388,11 @@ select {
   text-align: center; }
 .tagline strong {
   font-weight: 700; }
+@media (max-width: 749px) {
+  .tagline {
+    width: 96%;
+    float: left;
+    margin-right: 1.69492%; } }
 
 .land {
   width: 31.66667%;
@@ -1396,13 +1404,11 @@ select {
   margin-bottom: 40px; }
 @media (max-width: 749px) {
   .land {
-    width: 100%;
+    width: 96%;
     float: left;
-    margin-left: 0;
-    margin-right: 0;
-    height: 135px;
-    margin-bottom: 1.69492%;
-    background-color: green;
+    margin-right: 1.69492%;
+    height: 140px;
+    margin: 0.84746% 0;
     box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12); } }
 .land .icon {
   width: 150px;
@@ -1412,11 +1418,10 @@ select {
     width: 23.72881%;
     float: left;
     margin-right: 1.69492%;
-    background-color: blue;
     padding: 1.2em 0;
     height: 97px; }
   .land .icon img {
-    width: 50%; } }
+    width: 60%; } }
 .land article {
   font: 0.90909 "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400; }
@@ -1427,7 +1432,7 @@ select {
   font-weight: 700; }
 @media (max-width: 749px) {
   .land article {
-    width: 66.10169%;
+    width: 74.57627%;
     float: right;
     margin-right: 0;
     text-align: left; }
@@ -1439,25 +1444,13 @@ select {
   width: 32.20339%;
   margin: 0 auto;
   padding-bottom: 1.69492%; }
-<<<<<<< HEAD
-@media (max-width: 749px) {
-  #sign {
-    width: 100%;
-    float: left;
-    margin-left: 0;
-    margin-right: 0; } }
-#sign .signup {
-  background-color: #f7c600;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 1em;
-  text-transform: uppercase; }
-@media (max-width: 749px) {
-  #sign .signup {
-    width: 91.52542%; } }
-=======
 #sign form {
   margin-bottom: 60px; }
+@media (max-width: 749px) {
+  #sign {
+    width: 96%;
+    float: left;
+    margin-right: 1.69492%; } }
 #sign .signup {
   background-color: #f7c600;
   margin: 25px auto;
@@ -1465,7 +1458,10 @@ select {
   border-radius: 1em;
   text-transform: uppercase;
   display: block; }
->>>>>>> d5c21682a6a77dbaf5123692668932dcab24b600
+@media (max-width: 749px) {
+  #sign .signup {
+    width: 91.52542%;
+    height: 45px; } }
 
 footer {
   max-width: 100%;
@@ -1533,12 +1529,7 @@ footer .social {
   height: 53px;
   text-align: right; }
 footer .social a {
-  color: #d7dee4;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
+  color: #d7dee4; }
 footer .social a li {
   border-radius: 50%;
   border: 2px solid #d7dee4;
