--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,4 @@
-footer{
+footer{ 
 	@include container(12 center);
 	// @include card(1);
 	@include pad(1 of 12);
@@ -32,7 +32,7 @@ footer{
 		padding-top:1em;
 		height:53px;
 		text-align: right;
-		a{color:$footer-gray-light;@include vertical-align;
+		a{color:$footer-gray-light;
 		li {border-radius:50%; border:2px solid $footer-gray-light;
 			width:40px; height: 40px; display:inline-block;
 			text-align:center;
