--- a/css/style.css
+++ b/css/style.css
@@ -494,8 +494,7 @@ head:hover ~ #top:before, head:hover ~ body #top:before {
   margin: 0 auto; }
 @media (max-width: 749px) {
   .container {
-    width: 100%;
-    padding: 0 1.69492%; } }
+    width: 100%; } }
 
 .post {
   width: 66.10169%;
@@ -1370,14 +1369,16 @@ select {
 
 .logo-landing {
   height: 191px;
-  width: 47.36842%;
+  width: 52.63158%;
   overflow: hidden;
   margin: 30px auto;
   padding: 0; }
 @media (max-width: 749px) {
   .logo-landing {
-    width: 85%;
-    overflow: hidden; } }
+    width: 49%;
+    overflow: hidden;
+    height: 105px;
+    margin: 0.5em auto 0.2em; } }
 .logo-landing::before {
   content: url("../images/logo_big.png");
   display: block; }
@@ -1393,16 +1394,13 @@ select {
   margin-right: 0;
   font: 1.3em "Roboto", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin: 20px auto;
   text-align: center; }
 .tagline strong {
   font-weight: 700; }
 @media (max-width: 749px) {
   .tagline {
-    width: 96%;
-    float: left;
-    margin-right: 1.69492%; } }
+    width: 96%; } }
 
 .land {
   width: 31.66667%;
@@ -1417,8 +1415,8 @@ select {
     width: 96%;
     float: left;
     margin-right: 1.69492%;
-    height: 140px;
-    margin: 0.84746% 0;
+    min-height: 140px;
+    margin: 0.84746% 1.69492%;
     box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12); } }
 .land .icon {
   width: 150px;
@@ -1445,13 +1443,14 @@ select {
     width: 74.57627%;
     float: right;
     margin-right: 0;
-    text-align: left; }
+    text-align: left;
+    padding-bottom: 1.69492%; }
   .land article h1 {
     margin: 0; } }
 
 #sign {
   clear: both;
-  width: 32.20339%;
+  width: 40.67797%;
   margin: 0 auto;
   padding-bottom: 1.69492%; }
 #sign form {
@@ -1460,7 +1459,8 @@ select {
   #sign {
     width: 96%;
     float: left;
-    margin-right: 1.69492%; } }
+    margin-right: 1.69492%;
+    margin: 0.84746% 1.69492%; } }
 #sign .signup {
   background-color: #f7c600;
   margin: 25px auto;
@@ -1472,6 +1472,11 @@ select {
   #sign .signup {
     width: 91.52542%;
     height: 45px; } }
+#sign .formdone {
+  text-align: center; }
+#sign .formdone h3 {
+  font: 1.4em "Roboto", Helvetica, Arial, sans-serif;
+  font-weight: 400; }
 
 footer {
   max-width: 100%;
