--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -20,7 +20,9 @@
 
 .container {width:span(10 of 12); margin:0 auto;
 @include breakpoint(max-width ($sm - 1)){
-	width:span(12); padding:0 gutter();}
+	width:span(12); 
+	// padding:0 gutter();
+}
 }
 
 .post { @include span(8 of 12); @include card(2);
